[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/ColorSelector/ColorSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menu/PlayersMenu/NewPlayer.gd" type="Script" id=2]
[ext_resource path="res://1.tres" type="Theme" id=3]

[node name="NewPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -130.0
margin_top = -134.0
margin_right = 882.0
margin_bottom = 1672.0
color = Color( 0.133333, 0.184314, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="."]
margin_left = 82.0
margin_top = 192.0
margin_right = 557.0
margin_bottom = 351.0
placeholder_text = "Enter name here"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="."]
margin_left = 258.0
margin_top = 977.0
margin_right = 446.0
margin_bottom = 1171.0
text = "Create"

[node name="Back" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -242.0
margin_top = 45.0
margin_right = -100.0
margin_bottom = 92.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentColor" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.0
margin_top = -352.0
margin_right = 169.0
margin_bottom = -284.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CurrentColor"]
margin_top = 15.0
margin_right = 336.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "Current color:"
align = 1

[node name="ColorRect" type="ColorRect" parent="CurrentColor"]
margin_left = 340.0
margin_right = 404.0
margin_bottom = 68.0
rect_min_size = Vector2( 64, 64 )

[node name="ColorSelector" parent="." instance=ExtResource( 1 )]
margin_left = 233.0
margin_top = 509.0
margin_right = 501.0
margin_bottom = 777.0
mouse_filter = 2

[node name="EnterNamePopup" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.5
margin_top = -78.5
margin_right = 178.5
margin_bottom = 78.5
popup_exclusive = true
window_title = "Error"
dialog_text = "Please enter a name"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DuplicateNamePopup" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.5
margin_top = -78.5
margin_right = 178.5
margin_bottom = 78.5
popup_exclusive = true
window_title = "Error"
dialog_text = "Please enter a non-existing name"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
